<resources>
    <string name="app_name">Assignment07</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="book_id">Book Id</string>
    <string name="book_title">Book Title</string>
    <string name="publisher_name">Publisher</string>

    <string name="books">Books</string>
    <string name="add_book_form">Add Book Form</string>
    <string name="update_book_form">Update Book Form</string>
    <string name="update_book">Update Book</string>
    <string name="add_book">Add Book</string>
    <string name="delete_book">Delete Book</string>

    <string name="book_loans">Books Loans</string>
    <string name="add_book_loan_form">Add Book Loan Form</string>
    <string name="update_book_loan_form">Update Book Loan Form</string>
    <string name="update_book_loan">Update Book Loan</string>
    <string name="add_book_loan">Add Book Loan</string>
    <string name="delete_book_loan">Delete Book Loan</string>
    <string name="branch_id">Branch Id</string>
    <string name="card_number">Card Number</string>
    <string name="book_loan_out_data">Out Date</string>
    <string name="book_loan_due_data">Due Date</string>
    <string name="book_loan_return_data">Return Date</string>

    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="publishers">Publishers</string>
    <string name="add_publisher_form">Add Publisher Form</string>
    <string name="update_publisher_form">Update Publisher Form</string>
    <string name="update_publisher">Update Publisher</string>
    <string name="add_publisher">Add Publisher</string>
    <string name="delete_publisher">Delete Publisher</string>

    <string name="author_name">Name</string>
    <string name="book_authors">Book Authors</string>
    <string name="add_book_author_form">Add Book Author Form</string>
    <string name="update_book_author_form">Update Book Author Form</string>
    <string name="update_book_author">Update Book Author</string>
    <string name="add_book_author">Add Book Author</string>
    <string name="delete_book_author">Delete Book Author</string>


    <string name="access_number">Access Number</string>
    <string name="book_copy">Book Copy</string>
    <string name="add_book_copy_form">Add Book Copy Form</string>
    <string name="update_book_copy_form">Update Book Copy Form</string>
    <string name="update_book_copy">Update Book Copy</string>
    <string name="add_book_copy">Add Book Copy</string>
    <string name="delete_book_copy">Delete Book Copy</string>

    <string name="branch_name">Branch Name</string>
    <string name="branch_address">Address</string>

    <string name="branch">Branch</string>
    <string name="add_branch_form">Add Branch Form</string>
    <string name="update_branch_form">Update Branch Form</string>
    <string name="update_branch">Update Branch</string>
    <string name="add_branch">Add Branch</string>
    <string name="delete_branch">Delete Branch</string>

    <string name="member_name">Name</string>
    <string name="member_address">Address</string>
    <string name="member_phone">Phone</string>
    <string name="unpaid_dues">Unpaid Dues</string>
    <string name="member">Member</string>
    <string name="add_member_form">Add Member Form</string>
    <string name="update_member_form">Update Member Form</string>
    <string name="update_member">Update Member</string>
    <string name="add_member">Add Member</string>
    <string name="delete_member">Delete Member</string>
</resources>