<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".form.BookLoanForm">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/childToolBar"
            android:layout_width="match_parent"
            android:background="@color/blue"
            android:layout_height="wrap_content" tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp">
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:src="@drawable/baseline_arrow_back_24" android:id="@+id/backBtn"
                         app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/add_book_loan_form"
                      android:id="@+id/bookLoanFormToolBarText"
                      android:textSize="25sp"
                      android:textColor="@color/white"
                      android:textAlignment="viewStart"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="@+id/backBtn"
                      app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="5dp"
                  android:layout_marginTop="10dp"
                  android:background="@color/white"
                  tools:ignore="MissingConstraints" android:orientation="vertical"
                  android:id="@+id/linearLayout" tools:layout_editor_absoluteX="0dp"
                  app:layout_constraintTop_toBottomOf="@+id/childToolBar">

        <EditText
                android:id="@+id/editLoanAccessNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:hint="Access Number" />


        <EditText
                android:id="@+id/editLoanBranchId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:hint="Branch Id" />


        <EditText
                android:id="@+id/editLoanCardNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:hint="Card Number" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/txtLoanOutDate"
                    android:layout_width="wrap_content"
                    android:minWidth="300dp"
                    android:text="@string/book_loan_out_data"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/baseline_calendar_month_24"
                    android:layout_marginRight="20dp"
                    android:id="@+id/btnLoanDateOut"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/txtLoanDueDate"
                    android:layout_width="wrap_content"
                    android:minWidth="300dp"
                    android:text="@string/book_loan_due_data"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/baseline_calendar_month_24"
                    android:layout_marginRight="20dp"
                    android:id="@+id/btnLoanDateDue"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/txtLoanReturnDate"
                    android:layout_width="wrap_content"
                    android:minWidth="300dp"
                    android:text="@string/book_loan_return_data"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/baseline_calendar_month_24"
                    android:layout_marginRight="20dp"
                    android:id="@+id/btnLoanDateReturn"/>
        </RelativeLayout>

        <Button android:layout_width="match_parent" android:layout_height="50dp"
                android:id="@+id/btnBookLoanFormAction"
                android:text="@string/add_book_loan"/>
        <Button android:layout_width="match_parent" android:layout_height="50dp"
                android:id="@+id/btnDeleteBookLoan"
                android:visibility="invisible"
                android:text="@string/delete_book_loan"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>