<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.PublisherActivity"
        android:background="@color/bg">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true" tools:ignore="MissingConstraints" android:id="@+id/appBarLayout">


        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/childToolBar"
                android:layout_width="match_parent"
                android:background="@color/blue"
                android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@drawable/baseline_arrow_back_24" android:id="@+id/backBtn"
                           app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/publishers"
                          android:textSize="25sp"
                          android:textColor="@color/white"
                          android:textAlignment="viewStart"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="@+id/backBtn"
                          app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:id="@+id/bookTbContent"
                 android:background="@color/white"
                 app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
        <TableRow android:background="@color/black">
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/publisher_name"
                      android:textColor="@color/white"
                      android:padding="10sp"
                      android:textSize="14sp"
                      android:layout_weight="4"
                      android:gravity="center_horizontal"/>

            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/address"
                      android:textColor="@color/white"
                      android:padding="10sp"
                      android:textSize="14sp"
                      android:layout_weight="4"
                      android:gravity="center_horizontal"/>
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/phone"
                      android:textColor="@color/white"
                      android:padding="10sp"
                      android:textSize="14sp"
                      android:layout_weight="4"
                      android:gravity="center_horizontal"/>
        </TableRow>
    </TableLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/publisherFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@android:drawable/ic_input_add" tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginBottom="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>