<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".form.BookForm">
    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/childToolBar"
            android:layout_width="match_parent"
            android:background="@color/blue"
            android:layout_height="wrap_content" tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp">
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:src="@drawable/baseline_arrow_back_24" android:id="@+id/backBtn"
                         app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/add_book_form"
                      android:id="@+id/bookFormToolBarText"
                      android:textSize="25sp"
                      android:textColor="@color/white"
                      android:textAlignment="viewStart"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="@+id/backBtn"
                      app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="5dp"
                  android:layout_marginTop="10dp"
                  android:background="@color/white"
                  tools:ignore="MissingConstraints" android:orientation="vertical"
                  android:id="@+id/linearLayout" tools:layout_editor_absoluteX="0dp"
                  app:layout_constraintTop_toBottomOf="@+id/childToolBar">
        <EditText android:layout_width="match_parent" android:layout_height="50dp"
                  android:id="@+id/editBookId"
                  android:hint="Book Id"
                  android:layout_marginTop="1dp"
                  android:layout_marginBottom="1dp"
                  android:paddingStart="5dp"/>
        <EditText android:layout_width="match_parent" android:layout_height="50dp"
                  android:id="@+id/editBookTitle"
                  android:hint="Book Title"
                  android:paddingStart="5dp"/>
        <EditText android:layout_width="match_parent" android:layout_height="50dp"
                  android:id="@+id/editBookPublisher"
                  android:hint="Publisher"
                  android:paddingStart="5dp"/>
        <Button android:layout_width="match_parent" android:layout_height="50dp"
                android:id="@+id/btnBookFormAction"
                android:text="@string/add_book"/>
        <Button android:layout_width="match_parent" android:layout_height="50dp"
                android:id="@+id/btnDeleteBook"
                android:visibility="invisible"
                android:text="@string/delete_book"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>